- Created a new Improvement Type that improves the dicepool of a specific spell; the spelldicepool improvement is available in the Custom Improvement creator. 

Application Fixes:

- Slightly better implementation of the Upgrade mechanism for cyberware. Still needs work, but shouldn't improperly consume Essence anymore. 
- Fixed an issue with cyberware that should not permit subsystems still doing so. 
- Fixed incorrect consumption of capacity by modular limbs connecting to modular connectors. 
- Fixed the behaviour of the Death Mentor Spirit's Magician benefit to allow dicepool benefits for specific skills. Uses the spelldicepool improvement.
- Fixed an issue with traditions not probably updating.
- Fixed issues with use of Essence Antiholes in create mode that prevented them from working reliably.
- Fixed an issue with the selectatributes improvement that caused it to improperly allow Exceptional Attribute to select Edge.
- Fixed issues with Dedicated Spellslinger not working properly in career mode.

Application Changes:

- Spells now properly store their Source ID. Used for some Improvements. 
- Small refactor to the Spell class to use RelevantImprovements method. Doesn't actually reduce complexity, but makes me feel a bit better about having less boilerplate. 
- Added a string to the Skill.Core class that allows for formatting the skill's dicepool, specialisations and such instead of reprocessing it in multiple other locations.
- Refactored the creation, saving and loading of GUIDs for the Internal ID and Source ID of all objects to provide more consistency. There is a small risk that this will impact the stored improvements of some characters. I haven't been able to prove that it will happen, but logically it should based on this change. 

UI Changes:

- Fixed some behaviour with non-maximised windows to prevent new windows from being opened maximised, or windows being maximised on gaining focus. 